# ttt

./: .gitignore  README.md  alembic.ini  pyproject.toml
.github/workflows/: cd.yml  ci.yml
deploy/dev/: docker-compose.yaml
deploy/dev/backend/: Dockerfile
deploy/dev/nats/: add_streams.sh
deploy/dev/nats/streams/: user.json
deploy/dev/redis/: is-server-ok.sh  redis.conf  start-server.sh
deploy/dev/ttt/: Dockerfile  entrypoint.sh
deploy/prod/: .env.template  deploy.sh  docker-compose.postgres-bootstrap.yaml  docker-compose.yaml
deploy/prod/alloy/: config.alloy
deploy/prod/loki/: loki-config.yaml
deploy/prod/nats/: add_streams.sh  nats.conf
deploy/prod/nats/streams/: player.json
deploy/prod/postgres/: common-postgres.conf
deploy/prod/postgres_master/: Dockerfile  init.sql  pg_hda.conf  postgres.conf
deploy/prod/postgres_replica/: Dockerfile  postgres.conf  start-server.sh
deploy/prod/redis/: redis.conf
deploy/prod/ttt/: Dockerfile  alembic.ini
src/app_name_snake_case/: __init__.py
src/app_name_snake_case/application/: register_user.py  view_user.py
src/app_name_snake_case/application/ports/: clock.py  map.py  user_id_signing.py  user_views.py  users.py
src/app_name_snake_case/entities/core/: user.py
src/app_name_snake_case/entities/time/: time.py
src/app_name_snake_case/infrastructure/adapters/: clock.py  map.py  user_id_signing.py  users.py
src/app_name_snake_case/infrastructure/alembic/: env.py
src/app_name_snake_case/infrastructure/sqlalchemy/: __init__.py  orm.py  tables.py
src/app_name_snake_case/main/common/: asgi.py  di.py
src/app_name_snake_case/main/fastapi/: __main__.py  asgi.py  di.py
src/app_name_snake_case/presentation/adapters/: user_views.py
src/app_name_snake_case/presentation/fastapi/: app.py  cookies.py  routers.py  tags.py
src/ttt/: __init__.py
src/ttt/application/: common.py  game.py  player.py  register_user.py  view_user.py
src/ttt/application/game/: cancel_game.py  make_move_in_game.py  start_game.py  view_game.py  wait_game.py
src/ttt/application/player/: approve_stars_purchase_invoce.py  buy_emoji.py  complete_stars_purshase.py  complete_stars_purshase_payment.py  initiate_stars_purchase_payment.py  register_player.py  remove_emoji.py  select_emoji.py  start_stars_purchase.py  start_stars_purchase_payment.py  start_stars_purshase_completion.py  start_stars_purshase_payment_completion.py  view_player.py  view_stars_purchase_invoice.py  wait_emoji_to_buy.py  wait_emoji_to_select.py  wait_rubles_to_start_stars_purshase.py  wait_rubles_to_view_stars_purchase_invoice.py  wait_stars_to_start_stars_purshase.py
src/ttt/application/ports/: clock.py  map.py  user_views.py  users.py
src/ttt/application/user/: register_user.py  remove_emoji.py  view_emoji_menu.py  view_menu.py  view_user.py
src/ttt/entities/: aggregate.py  atomic.py  core.py  math.py  tools.py
src/ttt/entities/core/: player.py  stars.py
src/ttt/entities/elo/: rating.py  score.py
src/ttt/entities/finance/: rubles.py
src/ttt/entities/math/: matrix.py  random.py  vector.py
src/ttt/entities/telegram/: emoji.py  message.py
src/ttt/entities/text/: emoji.py
src/ttt/entities/time/: time.py
src/ttt/entities/tools/: assertion.py  tracking.py
src/ttt/infrastructure/: alias.py  background_tasks.py  buffer.py  dedublication.py  loading.py
src/ttt/infrastructure/adapters/: clock.py  game_ai_gateway.py  game_channel.py  game_log.py  game_starting_queue.py  game_waiting_channel.py  games.py  map.py  paid_stars_purchase_payment_inbox.py  players.py  randoms.py  transaction.py  user_id_signing.py  user_log.py  users.py  uuids.py  waiting_locations.py  waiting_player_id_pairs.py
src/ttt/infrastructure/alembic/: env.py  script.py.mako
src/ttt/infrastructure/nats/: messages.py  paid_stars_purchase_payment_inbox.py  subscription.py
src/ttt/infrastructure/openai/: gemini.py  promt.py
src/ttt/infrastructure/pydantic/: game_waiting_channel_message.py
src/ttt/infrastructure/pydantic_settings/: envs.py  secrets.py
src/ttt/infrastructure/redis/: batches.py
src/ttt/infrastructure/sqlalchemy/: __init__.py  loading.py  orm.py  sequence_map.py  stmts.py  tables.py
src/ttt/infrastructure/structlog/: logger.py  processors.py
src/ttt/infrastructure/typenv/: envs.py
src/ttt/main/aiogram/: di.py  start_aiogram.py
src/ttt/main/aiogram_dev/: __main__.py
src/ttt/main/common/: di.py
src/ttt/presentation/: unkillable_tasks.py
tests/test_app_name_snake_case/: conftest.py
tests/test_app_name_snake_case/test_infrastructure/: conftest.py
tests/test_ttt/: conftest.py
tests/test_ttt/test_entities/: test_core.py  test_math.py
tests/test_ttt/test_infrastructure/: conftest.py
(+285 files in other folders)
