[project]
name = "app-name-kebab-case"
version = "0.1.0"
description = "app_name_description"
authors = [
    {name = "Alexander Smolin", email = "88573504+emptybutton@users.noreply.github.com"}
]
license = "Apache-2.0"
readme = "README.md"
classifiers = ["Private :: Do Not Upload"]
requires-python = "==3.13.*"
dependencies = [
    "dishka==1.6.0",
    "effectt==0.2.0",
    "in-memory-db==0.3.0",
    "sqlalchemy==2.0.41",
    "psycopg[binary]==3.2.9",
    "alembic==1.16.1",
    "PyJWT==2.10.1",
    "typenv==0.2.0",
    "fastapi==0.115.12",
    "uvicorn[standard]==0.34.3",
]

[dependency-groups]
dev = [
    "mypy[faster-cache]==1.16.0",
    "ruff==0.11.13",
    "pytest==8.4.0",
    "pytest-cov==6.1.1",
    "pytest-asyncio==1.0.0",
    "dirty-equals==0.9.0",
    "httpx==0.28.1",
    "httpx-ws==0.7.2",
]

[project.urls]
Repository = "https://github.com/emptybutton/app-name-kebab-case"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app_name_snake_case"]

[project.scripts]
app-name-kebab-case-dev = "app_name_snake_case.main.fastapi.__main__:main"

[tool.uv]
add-bounds = "exact"

[tool.uv.workspace]
members = [
    "dist",
]

[tool.mypy]
mypy_path = "$MYPY_CONFIG_FILE_DIR/src:$MYPY_CONFIG_FILE_DIR/tests"
strict = true
no_namespace_packages = true
allow_redefinition = true

[tool.ruff]
src = ["src"]
preview = true
line-length = 80
indent-width = 4

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "EXE002",
    "CPY001",
    "C401",
    "C408",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "D200",
    "D201",
    "D202",
    "D203",
    "D205",
    "D401",
    "D212",
    "DOC201",
    "DOC501",
    "PLR6301",
    "TC002",
    "TC003",
    "TC006",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "PT013", "PLR2004", "D400", "D415"]
"tests/test_tgdb/test_entities/test_horizon.py" = ["D400", "D415"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"

[tool.coverage.run]
branch = true
source = ["src/"]
